--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ main {
 
 
 header {
-  background-color: #79d22c;
+  background-color: #0b03f4;
   color: white;
   text-align: center;
   padding: 40px 20px;
@@ -37,14 +37,14 @@ header {
 
 .question-card {
   background-color: white;
-  border-left: 10px solid #6cc24a;
+  border-left: 10px solid #f1e606;
   border-radius: 14px;
   padding: 16px;
   margin-bottom: 15px;
 }
 
 .q-number {
-  background-color: #6cc24a;
+  background-color: #0b03f4;
   color: white;
   padding: 6px 14px;
   border-radius: 20px;
@@ -64,7 +64,7 @@ header {
 }
 
 .column button {
-  background-color: #78ca58;
+  background-color: #0b03f4;
   color: white;
   border: none;
   padding: 10px;
@@ -83,7 +83,7 @@ header {
   margin: 30px auto;
   padding: 15px 30px;
   font-size: 18px;
-  background-color: #6cc24a;
+  background-color: #f1e606;
   color: white;
   border: none;
   border-radius: 8px;
